@@ -22,6 +22,9 @@ Ver.5.6 (in development)
 - [BUG FIX] INTERMediator.partialConstructing property wasn't appropriate value in doAfterProcessing method.
 - [BUG FIX] Customized button names on the pagination control didn't work correctly.
 - [BUG FIX] The INTERMediatorOnPage.doBeforeConstruct method won't be called other than just after page loaded.
+- [BUG FIX] INTERMediator.clearCondition sometimes clears all condition if a parameter is set.
+- [BUG FIX] MySQL PDO driver holds the keyword of SQL with quote characters.
+- [BUG FIX] Justify the compatibility of the Master/Detail Style UI and additional conditions.
 
 Ver.5.5 (October 13, 2016)
 - Support PHP 7 and checking on 7.1.0 Release Candidate 2, too.
